--- a/src/tests/sqlsmith/Cargo.toml
+++ b/src/tests/sqlsmith/Cargo.toml
@@ -9,24 +9,26 @@ edition = { workspace = true }
 [dependencies]
 chrono-tz = { workspace = true }
 clap = { workspace = true }
-databend-client = { workspace = true }
+cookie = { workspace = true }
 databend-common-ast = { workspace = true }
+databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
 databend-common-formats = { workspace = true }
 databend-common-functions = { workspace = true }
 databend-common-io = { workspace = true }
 databend-common-sql = { workspace = true }
-databend-driver = { workspace = true }
-databend-driver-core = { workspace = true }
 ethnum = { workspace = true }
 itertools = { workspace = true }
 jiff = { workspace = true }
 jsonb = { workspace = true }
 rand = { workspace = true }
+reqwest = { workspace = true, features = ["cookies"] }
+serde = { workspace = true }
+serde_json = { workspace = true }
 tokio = { workspace = true }
-tokio-stream = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+url = { workspace = true }
 
 [[bin]]
 name = "databend-sqlsmith"
