--- a/src/query/sql/Cargo.toml
+++ b/src/query/sql/Cargo.toml
@@ -32,6 +32,7 @@ databend-common-pipeline-transforms = { workspace = true }
 databend-common-settings = { workspace = true }
 databend-common-storage = { workspace = true }
 databend-common-storages-result-cache = { workspace = true }
+databend-common-storages-stage = { workspace = true }
 databend-common-storages-view = { workspace = true }
 databend-common-users = { workspace = true }
 databend-enterprise-data-mask-feature = { workspace = true }
