--- a/.github/actions/setup_bendsql/action.yml
+++ b/.github/actions/setup_bendsql/action.yml
@@ -3,25 +3,34 @@ description: "Setup BendSQL for CI"
 runs:
   using: "composite"
   steps:
-    - name: Download and Install for Linux
+    - name: Install for Linux
       if: runner.os == 'Linux'
       shell: bash
       run: |
         if bendsql --version; then
           exit 0
         fi
-        curl --retry 5 -Lo /tmp/bendsql.tar.gz https://github.com/datafuselabs/bendsql/releases/download/v0.18.3/bendsql-x86_64-unknown-linux-gnu.tar.gz
-        tar -xzf /tmp/bendsql.tar.gz -C /tmp
-        mv /tmp/bendsql /usr/local/bin/bendsql
+        case $RUNNER_PROVIDER in
+          aws)
+            aws s3 cp s3://databend-ci/packages/bendsql_$(dpkg --print-architecture).deb /tmp/bendsql.deb
+            sudo dpkg -i /tmp/bendsql.deb
+            ;;
+          gcp)
+            gsutil cp gs://databend-ci/packages/bendsql_$(dpkg --print-architecture).deb /tmp/bendsql.deb
+            sudo dpkg -i /tmp/bendsql.deb
+            ;;
+          *)
+            curl -fsSL https://repo.databend.com/install/bendsql.sh | bash -s -- -y --prefix /usr/local
+            ;;
+        esac
         bendsql --version
-    - name: Download and Install for macOS
+
+    - name: Install for macOS
       if: runner.os == 'macOS'
       shell: bash
       run: |
         if bendsql --version; then
           exit 0
         fi
-        curl --retry 5 -Lo /tmp/bendsql.tar.gz https://github.com/datafuselabs/bendsql/releases/download/v0.18.3/bendsql-x86_64-apple-darwin.tar.gz
-        tar -xzf /tmp/bendsql.tar.gz -C /tmp
-        mv /tmp/bendsql /usr/local/bin/bendsql
+        brew install databendcloud/homebrew-tap/bendsql
         bendsql --version
