--- a/src/common/exception/Cargo.toml
+++ b/src/common/exception/Cargo.toml
@@ -21,6 +21,7 @@ bincode = { workspace = true }
 geozero = { workspace = true }
 gimli = { workspace = true }
 http = { workspace = true }
+hyper = { workspace = true }
 libc = { workspace = true }
 object = { workspace = true }
 once_cell = { workspace = true }
