--- a/Cargo.toml
+++ b/Cargo.toml
@@ -450,6 +450,7 @@ sled = { version = "0.34", default-features = false }
 snailquote = "0.3.1"
 snap = "1"
 socket2 = "0.5.3"
+span-map = { version = "0.2.0" }
 sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
 state = "0.6.0"
 stream-more = "0.1.3"
